# nlip_swarm

./: .gitignore  README.md  compose.yaml  requirements.txt  start-compose.ps1  start-compose.sh  start-whisper.sh
backend/: .gitignore  Dockerfile  Dockerfile.agent-service  README.Docker.md  README.md  agent_spec.json  cookies.txt  models.ini  pyproject.toml  requirements.txt  run.py  start-whisper.sh
backend/app/: __init__.py  _logging.py  api.py  db.py  example.env  main.py  manager.py  messages.py  registry.py  router.py  supervisor.py
backend/app/agents/: __init__.py  base.py  coordinator_nlip_agent.py  imageRecognition.py  nlip_agent.py  sound.py  swarm_manager.py  textAgent.py  translation.py
backend/app/auth/: crud.py  db.py  models.py  schemas.py
backend/app/deprecated/: api.py  manager.py  nlip.py  nlip_adapter.py  registry.py  router.py  supervisor.py  swarm_manager.py  test_nlip.py
backend/app/depricated/: api.py  manager.py  supervisor.py
backend/app/http_client/: nlip_async_client.py
backend/app/http_server/: nlip_session_server.py
backend/app/models/: conversation.py  message.py  user.py
backend/app/routes/: nlip.py
backend/app/servers/: basic_server.py  coordinator_server.py  image_server.py  sound_server.py  text_server.py  translate_server.py
backend/app/system/: agentAdder.py  config.py  main.py  mem_registry.py  (+1 more)
backend/scripts/: check_llm.py  create_tables.py  whisper_server.py
backend/tests/: test_image_Recognition.py  test_image_flow.py  test_main_routes.py  test_nlip.py  test_sound_agent.py  test_translation_agent.py
(+44 files in other folders)
