[project]
name = "nlip-swarm-registrar"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "openai-whisper>=20231117",
]

[tool.uv]

[tool.pytest.ini_options]
markers = [
    "integration: tests that require live external services such as Ollama",
]
