[project]
name = "nlip-swarm-registrar"
version = "0.1.0"
requires-python = ">=3.11"
# NOTE: Full runtime dependencies are in requirements.txt at the repo root.
# This file only tracks build/tool configuration.
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
]

[tool.uv]

[tool.pytest.ini_options]
markers = [
    "integration: tests that require live external services such as Ollama",
]
